<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_help">Help</string>
    <string name="about_help_url">https://superdisplay.app/help</string>
    <string name="about_kelocube">"Software by KeloCube
www.kelocube.com
twitter.com/KeloCube"</string>
    <string name="about_kelocube_avatar">KeloCube avatar</string>
    <string name="about_label">About</string>
    <string name="about_open_source_licenses">Open source licenses</string>
    <string name="about_oss_description">"Special thanks to the following open source tools, libraries and projects. Without them, SuperDisplay wouldn't exist."</string>
    <string name="about_report_error">Report a problem</string>
    <string name="about_support">Support</string>
    <string name="about_support_desc">Send a support email</string>
    <string name="about_support_email">support@kelocube.com</string>
    <string name="about_support_message">"If you have problems using the app or some other question, don't hesistate to send us an email at support@kelocube.com!"</string>
    <string name="about_support_title">Support</string>
    <string name="about_version_text">Android client version %s</string>
    <string name="aboutlibrary_lib_version">8.0.0</string>
    <string name="action_alt">Alt</string>
    <string name="action_ctrl">Ctrl</string>
    <string name="action_none">(none)</string>
    <string name="action_reset_view">Reset view %d</string>
    <string name="action_set_view">Switch to view %d</string>
    <string name="action_shift">Shift</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">SuperDisplay</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back_button_text">BACK</string>
    <string name="billing_discount">30% off for a limited time!</string>
    <string name="billing_error_body">Please make sure your device is online.</string>
    <string name="billing_error_disconnected">Please wait a few seconds and try again.</string>
    <string name="billing_error_title">Unable to start purchase</string>
    <string name="billing_error_toast">Unexpected licensing error: %d</string>
    <string name="billing_pending_body">Thank you for purchasing SuperDisplay! The application will be unlocked once you have completed the purchase.</string>
    <string name="billing_pending_title">Purchase pending</string>
    <string name="billing_purchased_body">"Thank you so much for buying my app. I've spent countless nights developing SuperDisplay, so your support means the world to me. One of the best things in having developed an application is hearing people's feedback. If you have a moment to spare, I would appreciate it hugely if you could leave a rating or review on the Play Store. In addition to making me happy, reviews help SuperDisplay grow and ensure that I'm able to dedicate time to working on it in the future as well. Please don't feel pressured to leaving a rating, however - if you don't want to, just click \"No thanks\" and you will not be bothered again unless you reinstall the app.

Should you have any questions or face any problems while using the app, don't hesitate to contact me at support@kelocube.com. Enjoy SuperDisplay!

Otto Itkonen (KeloCube)
Developer of SuperDisplay"</string>
    <string name="billing_purchased_no_thanks">No thanks</string>
    <string name="billing_purchased_rate">Leave a rating</string>
    <string name="billing_purchased_title">From the developer</string>
    <string name="billing_redeem_button">Redeem IAP</string>
    <string name="billing_redeem_message">&lt;p>&lt;b>Since you already own Superbrush, you DO NOT need to pay again! Just click Redeem IAP to continue using the app.&lt;/b>&lt;/p></string>
    <string name="billing_redeem_title">Superbrush is now SuperDisplay</string>
    <string name="billing_trial_buy">Buy %s</string>
    <string name="billing_trial_expired_message">We hope you enjoyed the trial! Please purchase the full version to continue using SuperDisplay.</string>
    <string name="billing_trial_expired_title">Your trial has expired</string>
    <string name="billing_trial_later">Later</string>
    <string name="billing_trial_message">If you enjoyed using the app, please consider buying the unlimited version!</string>
    <string name="billing_trial_reminder_message">" If you like the app, please consider buying it! You can keep using the app for free for up to 3 days.&lt;br> If you need any help, check out the FAQ at &lt;a href=https://superdisplay.app/help>https://superdisplay.app/help&lt;/a> or send us a message at &lt;a href=mailto:support@kelocube.com>support@kelocube.com&lt;/a>! "</string>
    <string name="billing_trial_reminder_title">What did you think?</string>
    <string name="billing_trial_title">How was it?</string>
    <string name="billing_welcome_body">Thanks for downloading SuperDisplay! SuperDisplay is not a free app, but you can try it for free for up to 3 days. Should you face any issues during your trial, you can get help at superdisplay.app/help or by contacting support@kelocube.com. We hope you will enjoy using the app!</string>
    <string name="billing_welcome_title">Welcome to SuperDisplay!</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="calibrate_stylus_title">Calibrate SonarPen</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="command_toggle_keyboard">Toggle keyboard</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connect_connect">Connect</string>
    <string name="dialog_edit_action_select_key">Select action…</string>
    <string name="icd_action_cancel">Cancel</string>
    <string name="icd_action_clear">Clear</string>
    <string name="icd_action_select">Select</string>
    <string name="main_purchase">Get full version</string>
    <string name="onboarding_action_menu_body">"&lt;font color='#%1$6x'>Tap&lt;/font> this button to switch between touch functions. &lt;br>&lt;br> &lt;font color='#%1$6x'>Tap and hold&lt;/font> this button to open the menu and access the action buttons. Customize the menu or hide it completely from the settings."</string>
    <string name="onboarding_action_menu_ok">Got it!</string>
    <string name="onboarding_action_menu_title">On-screen menu</string>
    <string name="pref_stylus_calibrate_desc">"Draw with high and low pressure until you're happy with the calibration, or adjust the slider to set the active pressure range manually."</string>
    <string name="pref_stylus_calibrate_desc_2">To draw with the SonarPen in Windows, make sure the pen is the active touch mode. Tap the button in the top-left corner of the screen to toggle the touch mode.</string>
    <string name="settings_label">Settings</string>
    <string name="word_cancel">Cancel</string>
    <string name="word_ok">OK</string>
    <string name="word_reset">Reset</string>
    <string name="word_save">Save</string>
</resources>