<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:paddingLeft="16.0dip" android:paddingTop="16.0dip" android:paddingRight="16.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Large" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" />
    <com.kelocube.mirrorclient.ui.InstantAutoCompleteView android:id="@id/key_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:hint="@string/dialog_edit_action_select_key" />
    <LinearLayout android:gravity="start" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
        <CheckBox android:id="@id/mod_ctrl" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action_ctrl" />
        <CheckBox android:id="@id/mod_alt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action_alt" android:layout_marginStart="16.0dip" />
        <CheckBox android:id="@id/mod_shift" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/action_shift" android:layout_marginStart="16.0dip" />
    </LinearLayout>
    <LinearLayout android:gravity="end" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
        <Button android:textColor="@color/colorOnPrimary" android:id="@id/button_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/word_cancel" android:layout_marginEnd="8.0dip" style="@style/Widget.MaterialComponents.Button.TextButton" />
        <Button android:textColor="@color/colorOnAccent" android:id="@id/button_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/word_ok" android:layout_marginEnd="8.0dip" style="@style/PrimaryButton" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>