<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical" android:paddingLeft="16.0dip" android:paddingTop="16.0dip" android:paddingRight="16.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Large" android:id="@id/text_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/billing_trial_expired_title" />
    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:id="@id/text_body" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/billing_trial_expired_message" />
    <TextView android:textSize="24.0sp" android:id="@id/text_discount" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/billing_discount" android:textAllCaps="false" android:fontFamily="@font/fira_sans_extralight" android:textAlignment="center" />
    <LinearLayout android:gravity="right" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip">
        <Button android:textColor="@color/colorOnPrimary" android:id="@id/button_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/billing_trial_later" android:layout_marginEnd="8.0dip" style="@style/Widget.MaterialComponents.Button.TextButton" />
        <Button android:textColor="@color/colorBuy" android:id="@id/button_buy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/billing_trial_buy" style="@style/BuyButton" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>