<?xml version="1.0" encoding="utf-8"?>
<view android:orientation="vertical" android:id="@id/layout_root" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" class="com.kelocube.mirrorclient.ui.CalibrateStylusActivity$DrawView"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textColor="@color/colorOnBackground" android:id="@id/textView7" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pref_stylus_calibrate_desc" />
    <LinearLayout android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
        <ImageView android:background="@drawable/circle" android:layout_width="48.0dip" android:layout_height="48.0dip" android:scaleType="center" android:layout_marginEnd="8.0dip" app:srcCompat="@drawable/ic_lead_pencil" />
        <TextView android:textColor="@color/colorOnBackground" android:id="@id/textView8" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pref_stylus_calibrate_desc_2" />
    </LinearLayout>
    <View android:id="@id/view4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
    <com.google.android.material.slider.RangeSlider android:id="@id/slider" android:layout_width="fill_parent" android:layout_height="wrap_content" app:thumbColor="@color/colorAccent" app:trackColorActive="@color/colorAccentDark" />
    <LinearLayout android:orientation="horizontal" android:id="@id/layout2" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/button_cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/word_cancel" android:layout_weight="1.0" />
        <Button android:id="@id/button_reset" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/word_reset" android:layout_weight="1.0" />
        <Button android:id="@id/button_save" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/word_save" android:layout_weight="1.0" style="@style/PrimaryButton" />
    </LinearLayout>
</view>