<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="400.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_gravity="center|left|top" android:id="@id/imageView2" android:layout_width="20.0dip" android:layout_height="40.0dip" app:srcCompat="@drawable/onboarding_bubble_tri" />
    <LinearLayout android:orientation="vertical" android:background="@drawable/onboarding_bubble" android:padding="?dialogPreferredPadding" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="20.0dip">
        <TextView android:id="@id/textView2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/onboarding_action_menu_title" style="@style/TextAppearance.AppCompat.Title" />
        <TextView android:textColor="@color/colorOnPrimary" android:textColorLink="@color/colorOnPrimary" android:id="@id/text_body" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/onboarding_action_menu_body" />
        <Button android:textColor="@color/colorOnPrimary" android:layout_gravity="end" android:id="@id/button_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="-16.0dip" android:text="@string/onboarding_action_menu_ok" style="@style/MaterialDialog.Button" />
    </LinearLayout>
</FrameLayout>