<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/layout_root" android:background="@drawable/back_waiting" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:id="@id/back_view" android:background="@drawable/back_connected" android:layout_width="wrap_content" android:layout_height="wrap_content" android:alpha="0.0" />
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/activity_margin">
        <ImageView android:id="@id/imageView" android:paddingLeft="32.0dip" android:paddingRight="32.0dip" android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_margin="8.0dip" android:scaleType="fitCenter" android:adjustViewBounds="true" android:maxWidth="260.0dip" android:layout_weight="1.0" android:elevation="2.0dip" app:srcCompat="@null" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:animateLayoutChanges="true">
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip">
                <ProgressBar android:id="@id/pbar_status" android:layout_width="30.0sp" android:layout_height="30.0sp" android:indeterminate="true" android:layout_marginEnd="12.0dip" android:indeterminateTint="#ffffffff" style="?android:progressBarStyle" />
                <TextView android:textSize="30.0sp" android:textColor="@android:color/white" android:id="@id/text_status_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="@font/fira_sans_extralight" android:textAlignment="center" />
            </LinearLayout>
            <TextView android:textColor="@android:color/white" android:textColorLink="@color/colorOnPrimary" android:id="@id/text_status_desc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fontFamily="sans-serif-medium" android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/activity_margin">
        <Button android:textColor="@color/colorBuy" android:id="@id/button_purchase" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_purchase" app:icon="@drawable/ic_shop_black_24dp" app:iconTint="@color/colorBuy" style="@style/BuyButton" />
        <View android:id="@id/view" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <ImageButton android:id="@id/button_about" android:background="?selectableItemBackgroundBorderless" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:tint="#ffffffff" android:contentDescription="@string/about_label" app:srcCompat="@drawable/ic_info_outline_32dp" />
        <ImageButton android:id="@id/button_settings" android:background="?selectableItemBackgroundBorderless" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:tint="#ffffffff" android:contentDescription="@string/settings_label" app:srcCompat="@drawable/ic_settings_32dp" />
    </LinearLayout>
</FrameLayout>