<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/icd_layout" android:background="?colorBackgroundFloating" android:paddingTop="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@id/icd_txv_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toTopOf="@id/icd_edt_search" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="spread_inside" style="?icdDialogTitleStyle" />
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/icd_imv_search" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginStart="8.0dip" app:layout_constraintBottom_toBottomOf="@id/icd_edt_search" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/icd_edt_search" style="?icdSearchIconStyle" />
    <EditText android:id="@id/icd_edt_search" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toTopOf="@id/icd_div_header" app:layout_constraintEnd_toStartOf="@id/icd_imv_clear_search" app:layout_constraintStart_toEndOf="@id/icd_imv_search" app:layout_constraintTop_toBottomOf="@id/icd_txv_title" style="?icdSearchBarStyle" />
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/icd_imv_clear_search" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/icd_edt_search" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/icd_edt_search" style="?icdCancelSearchIconStyle" />
    <View android:id="@id/icd_div_header" android:background="?icdDividerDrawable" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_marginTop="8.0dip" app:layout_constraintBottom_toTopOf="@id/icd_rcv_icon_list" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/icd_edt_search" />
    <androidx.recyclerview.widget.RecyclerView android:id="@id/icd_rcv_icon_list" android:layout_width="0.0dip" android:layout_height="0.0dip" app:layout_constraintBottom_toTopOf="@id/icd_div_footer" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/icd_div_header" style="?icdDialogListStyle" />
    <ProgressBar android:id="@id/icd_progress_bar" android:visibility="gone" android:layout_width="64.0dip" android:layout_height="64.0dip" app:layout_constraintBottom_toBottomOf="@id/icd_rcv_icon_list" app:layout_constraintEnd_toEndOf="@id/icd_rcv_icon_list" app:layout_constraintStart_toStartOf="@id/icd_rcv_icon_list" app:layout_constraintTop_toTopOf="@id/icd_rcv_icon_list" />
    <TextView android:gravity="center" android:id="@id/icd_txv_no_result" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/icd_div_header" style="?icdNoResultLabelStyle" />
    <View android:id="@id/icd_div_footer" android:background="?icdDividerDrawable" android:layout_width="0.0dip" android:layout_height="1.0dip" app:layout_constraintBottom_toTopOf="@id/icd_btn_select" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/icd_rcv_icon_list" />
    <Button android:id="@id/icd_btn_clear" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/icd_action_clear" android:layout_marginStart="5.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/icd_div_footer" style="?icdDialogButtonStyle" />
    <Button android:id="@id/icd_btn_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/icd_action_cancel" android:layout_marginEnd="5.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/icd_btn_select" app:layout_constraintTop_toBottomOf="@id/icd_div_footer" style="?icdDialogButtonStyle" />
    <Button android:id="@id/icd_btn_select" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/icd_action_select" android:layout_marginEnd="5.0dip" app:layout_constraintBottom_toBottomOf="@id/icd_btn_cancel" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/icd_btn_cancel" style="?icdDialogButtonStyle" />
</androidx.constraintlayout.widget.ConstraintLayout>